# todo-api-py

./: .aider.chat.history.md  .codecov.yml  .coverage  .gitignore  PLAN.md  README.md  alembic.ini  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sql_app.db
.github/workflows/: tests.yml
.idx/: dev.nix
alembic/: env.py
alembic/versions/: 0a53d230cb8e_create_todo_table.py
app/: config.py  database.py  main.py
app/models/: __init__.py  category.py  memo.py  reminder.py  tag.py  todo.py
app/routers/: category.py  memo.py  reminder.py  tag.py  todo.py
app/schemas/: category.py  memo.py  reminder.py  tag.py  todo.py
src/todo_api_py/: __init__.py
tests/: conftest.py  test_categories.py  test_memos.py  test_reminders.py  test_tags.py  test_todos.py
