[project]
name = "todo-api-py"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Jianwei Han", email = "hanjianwei@gmail.com" }
]
dependencies = [
    "fastapi>=0.115.12",
    "uvicorn[standard]>=0.34.0",
    "pydantic>=2.11.2",
    "sqlalchemy>=2.0.40",
    "asyncpg>=0.30.0",
    "alembic>=1.15.2",
    "python-jose>=3.4.0",
    "cryptography>=44.0.2",
    "pydantic-settings>=2.8.1",
    "aiosqlite>=0.21.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "pytest>=8.3.5",
    "pytest-asyncio>=0.26.0",
    "pytest-cov>=6.1.1",
    "httpx>=0.28.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/todo_api_py"]
